--- a/src/components/css/upper-center-deck.css
+++ b/src/components/css/upper-center-deck.css
@@ -77,24 +77,13 @@
   flex: 1;
   display: flex;
   justify-content: center;
+    align-items: center;
+  min-width: 250px;
 }
 
-.about-image {
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 50%;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-  animation: spin 20s linear infinite;
-}
 
-/* Optional: spinning effect */
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
-/* Responsive */
+
 @media (max-width: 768px) {
   .about-me-content {
     flex-direction: column;
@@ -104,4 +93,13 @@
   .about-right {
     margin-top: 2rem;
   }
+}
+
+.typing-wrapper {
+  max-width: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
